Corrected bugs with box collapsing and added verification if there is a level with 0 percentage

--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ button {
    margin-bottom: 15px;
 }
 
-.info-question div, .answer div{
+.info-question div, .answer div, .content div{
     margin-bottom: 14px;
 }
 
@@ -380,7 +380,7 @@ button {
 
 .closed span {
     margin-bottom: 10px;
-    transition: 0.5s linear;
+    /* transition: 0.5s linear; */
 }
 
 .closed {
@@ -396,7 +396,7 @@ button {
 }
 
 .quizz-levels input {
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
 }
 
 .quizz-levels input:last-child {
@@ -453,7 +453,7 @@ button {
 }
 
 .opened {
-    max-height: 750px;
+    max-height: 850px;
 }
 
 @media (max-width: 1100px) {
@@ -541,13 +541,14 @@ button {
         padding: 22px 16px;
         width: 100%;
         height: 99px;
+        text-align: center;
     }
 
     .result-container {
         display: block;
         margin-top: 9px;
         width: 100%;
-        height: 96px;
+        /* height: 96px; */
     }
 
     .result-container img {
@@ -560,6 +561,7 @@ button {
     .result-container span {
         font-size: 17px;
         line-height: 20px;
+        word-wrap: break-word;
     }
 
     .restart-quiz-button {
@@ -581,11 +583,11 @@ button {
     }
 
     .container-create {
-        width: 375px;
+        width: 100vw;
     }
 
     .default-button {
-        margin: 48px 0;
+        /* margin: 48px 0; */
         font-size: 18px;
     }
 
